exports[`invalid(1): {\n\t\"files\": [\n\t\t\"!tests\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"!tests"
  4 | 	]
  5 | }

`;

exports[`invalid(1): {\n\t\"files\": [\n\t\t\"!tests\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
> 3 | 		"!tests"
    | 		^^^^^^^^ No earlier \`files\` pattern can include \`tests\`, so this negation is ineffective.
  4 | 	]
  5 | }

Output:
  1 | {
  2 | 	"files": []
  3 | }

`;

exports[`invalid(10): {\n\t\"files\": [\n\t\t\"Package.json\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"Package.json"
  4 | 	]
  5 | }

`;

exports[`invalid(10): {\n\t\"files\": [\n\t\t\"Package.json\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
> 3 | 		"Package.json"
    | 		^^^^^^^^^^^^^^ \`Package.json\` is always included by npm and is redundant in \`files\`.
  4 | 	]
  5 | }

Output:
  1 | {
  2 | 	"files": []
  3 | }

`;

exports[`invalid(11): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"README.md\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"README.md"
  5 | 	]
  6 | }

`;

exports[`invalid(11): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"README.md\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"src",
> 4 | 		"README.md"
    | 		^^^^^^^^^^^ \`README.md\` is always included by npm and is redundant in \`files\`.
  5 | 	]
  6 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"src"
  4 | 	]
  5 | }

`;

exports[`invalid(12): {\n\t\"files\": [\n\t\t\"README\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"README"
  4 | 	]
  5 | }

`;

exports[`invalid(12): {\n\t\"files\": [\n\t\t\"README\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
> 3 | 		"README"
    | 		^^^^^^^^ \`README\` is always included by npm and is redundant in \`files\`.
  4 | 	]
  5 | }

Output:
  1 | {
  2 | 	"files": []
  3 | }

`;

exports[`invalid(13): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"LICENSE\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"LICENSE"
  5 | 	]
  6 | }

`;

exports[`invalid(13): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"LICENSE\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"src",
> 4 | 		"LICENSE"
    | 		^^^^^^^^^ \`LICENSE\` is always included by npm and is redundant in \`files\`.
  5 | 	]
  6 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"src"
  4 | 	]
  5 | }

`;

exports[`invalid(14): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"LICENCE.md\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"LICENCE.md"
  5 | 	]
  6 | }

`;

exports[`invalid(14): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"LICENCE.md\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"src",
> 4 | 		"LICENCE.md"
    | 		^^^^^^^^^^^^ \`LICENCE.md\` is always included by npm and is redundant in \`files\`.
  5 | 	]
  6 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"src"
  4 | 	]
  5 | }

`;

exports[`invalid(15): {\n\t\"files\": [\n\t\t\"COPYING.md\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"COPYING.md"
  4 | 	]
  5 | }

`;

exports[`invalid(15): {\n\t\"files\": [\n\t\t\"COPYING.md\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
> 3 | 		"COPYING.md"
    | 		^^^^^^^^^^^^ \`COPYING.md\` is always included by npm and is redundant in \`files\`.
  4 | 	]
  5 | }

Output:
  1 | {
  2 | 	"files": []
  3 | }

`;

exports[`invalid(16): {\n\t\"main\": \"./index.js\",\n\t\"bin\": {\n\t\t\"cli\": \"./cli.js\"\n\t},\n\t\"files\": [\n\t\t\"index.js\",\n\t\t\"cli.js\"\n\t]\n} 1`] = `

[Input]
   1 | {
   2 | 	"main": "./index.js",
   3 | 	"bin": {
   4 | 		"cli": "./cli.js"
   5 | 	},
   6 | 	"files": [
   7 | 		"index.js",
   8 | 		"cli.js"
   9 | 	]
  10 | }

`;

exports[`invalid(16): {\n\t\"main\": \"./index.js\",\n\t\"bin\": {\n\t\t\"cli\": \"./cli.js\"\n\t},\n\t\"files\": [\n\t\t\"index.js\",\n\t\t\"cli.js\"\n\t]\n} 2`] = `

Message:
   1 | {
   2 | 	"main": "./index.js",
   3 | 	"bin": {
   4 | 		"cli": "./cli.js"
   5 | 	},
   6 | 	"files": [
>  7 | 		"index.js",
     | 		^^^^^^^^^^ \`index.js\` is always included by npm and is redundant in \`files\`.
   8 | 		"cli.js"
   9 | 	]
  10 | }

Output:
  1 | {
  2 | 	"main": "./index.js",
  3 | 	"bin": {
  4 | 		"cli": "./cli.js"
  5 | 	},
  6 | 	"files": [
  7 | 		"cli.js"
  8 | 	]
  9 | }

`;

exports[`invalid(16): {\n\t\"main\": \"./index.js\",\n\t\"bin\": {\n\t\t\"cli\": \"./cli.js\"\n\t},\n\t\"files\": [\n\t\t\"index.js\",\n\t\t\"cli.js\"\n\t]\n} 3`] = `

Message:
   1 | {
   2 | 	"main": "./index.js",
   3 | 	"bin": {
   4 | 		"cli": "./cli.js"
   5 | 	},
   6 | 	"files": [
   7 | 		"index.js",
>  8 | 		"cli.js"
     | 		^^^^^^^^ \`cli.js\` is always included by npm and is redundant in \`files\`.
   9 | 	]
  10 | }

Output:
  1 | {
  2 | 	"main": "./index.js",
  3 | 	"bin": {
  4 | 		"cli": "./cli.js"
  5 | 	},
  6 | 	"files": [
  7 | 		"index.js"
  8 | 	]
  9 | }

`;

exports[`invalid(17): {\n\t\"main\": \"./index.js\",\n\t\"bin\": \"./cli.js\",\n\t\"browser\": \"./browser.js\",\n\t\"files\": [\n\t\t\"index.js\",\n\t\t\"cli.js\",\n\t\t\"browser.js\"\n\t]\n} 1`] = `

[Input]
   1 | {
   2 | 	"main": "./index.js",
   3 | 	"bin": "./cli.js",
   4 | 	"browser": "./browser.js",
   5 | 	"files": [
   6 | 		"index.js",
   7 | 		"cli.js",
   8 | 		"browser.js"
   9 | 	]
  10 | }

`;

exports[`invalid(17): {\n\t\"main\": \"./index.js\",\n\t\"bin\": \"./cli.js\",\n\t\"browser\": \"./browser.js\",\n\t\"files\": [\n\t\t\"index.js\",\n\t\t\"cli.js\",\n\t\t\"browser.js\"\n\t]\n} 2`] = `

Message:
   1 | {
   2 | 	"main": "./index.js",
   3 | 	"bin": "./cli.js",
   4 | 	"browser": "./browser.js",
   5 | 	"files": [
>  6 | 		"index.js",
     | 		^^^^^^^^^^ \`index.js\` is always included by npm and is redundant in \`files\`.
   7 | 		"cli.js",
   8 | 		"browser.js"
   9 | 	]
  10 | }

Output:
  1 | {
  2 | 	"main": "./index.js",
  3 | 	"bin": "./cli.js",
  4 | 	"browser": "./browser.js",
  5 | 	"files": [
  6 | 		"cli.js",
  7 | 		"browser.js"
  8 | 	]
  9 | }

`;

exports[`invalid(17): {\n\t\"main\": \"./index.js\",\n\t\"bin\": \"./cli.js\",\n\t\"browser\": \"./browser.js\",\n\t\"files\": [\n\t\t\"index.js\",\n\t\t\"cli.js\",\n\t\t\"browser.js\"\n\t]\n} 3`] = `

Message:
   1 | {
   2 | 	"main": "./index.js",
   3 | 	"bin": "./cli.js",
   4 | 	"browser": "./browser.js",
   5 | 	"files": [
   6 | 		"index.js",
>  7 | 		"cli.js",
     | 		^^^^^^^^ \`cli.js\` is always included by npm and is redundant in \`files\`.
   8 | 		"browser.js"
   9 | 	]
  10 | }

Output:
  1 | {
  2 | 	"main": "./index.js",
  3 | 	"bin": "./cli.js",
  4 | 	"browser": "./browser.js",
  5 | 	"files": [
  6 | 		"index.js",
  7 | 		"browser.js"
  8 | 	]
  9 | }

`;

exports[`invalid(17): {\n\t\"main\": \"./index.js\",\n\t\"bin\": \"./cli.js\",\n\t\"browser\": \"./browser.js\",\n\t\"files\": [\n\t\t\"index.js\",\n\t\t\"cli.js\",\n\t\t\"browser.js\"\n\t]\n} 4`] = `

Message:
   1 | {
   2 | 	"main": "./index.js",
   3 | 	"bin": "./cli.js",
   4 | 	"browser": "./browser.js",
   5 | 	"files": [
   6 | 		"index.js",
   7 | 		"cli.js",
>  8 | 		"browser.js"
     | 		^^^^^^^^^^^^ \`browser.js\` is always included by npm and is redundant in \`files\`.
   9 | 	]
  10 | }

Output:
  1 | {
  2 | 	"main": "./index.js",
  3 | 	"bin": "./cli.js",
  4 | 	"browser": "./browser.js",
  5 | 	"files": [
  6 | 		"index.js",
  7 | 		"cli.js"
  8 | 	]
  9 | }

`;

exports[`invalid(18): {\n\t\"main\": \"./Index.js\",\n\t\"files\": [\n\t\t\"index.js\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"main": "./Index.js",
  3 | 	"files": [
  4 | 		"index.js"
  5 | 	]
  6 | }

`;

exports[`invalid(18): {\n\t\"main\": \"./Index.js\",\n\t\"files\": [\n\t\t\"index.js\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"main": "./Index.js",
  3 | 	"files": [
> 4 | 		"index.js"
    | 		^^^^^^^^^^ \`index.js\` is always included by npm and is redundant in \`files\`.
  5 | 	]
  6 | }

Output:
  1 | {
  2 | 	"main": "./Index.js",
  3 | 	"files": []
  4 | }

`;

exports[`invalid(19): {\n\t\"bin\": {\n\t\t\"cli\": \"./cli.js\"\n\t},\n\t\"files\": [\n\t\t\"**\",\n\t\t\"!cli.js\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"bin": {
  3 | 		"cli": "./cli.js"
  4 | 	},
  5 | 	"files": [
  6 | 		"**",
  7 | 		"!cli.js"
  8 | 	]
  9 | }

`;

exports[`invalid(19): {\n\t\"bin\": {\n\t\t\"cli\": \"./cli.js\"\n\t},\n\t\"files\": [\n\t\t\"**\",\n\t\t\"!cli.js\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"bin": {
  3 | 		"cli": "./cli.js"
  4 | 	},
  5 | 	"files": [
  6 | 		"**",
> 7 | 		"!cli.js"
    | 		^^^^^^^^^ \`cli.js\` is always included by npm and is redundant in \`files\`.
  8 | 	]
  9 | }

Output:
  1 | {
  2 | 	"bin": {
  3 | 		"cli": "./cli.js"
  4 | 	},
  5 | 	"files": [
  6 | 		"**"
  7 | 	]
  8 | }

`;

exports[`invalid(2): {\n\t\"files\": [\n\t\t\"dist\",\n\t\t\"!tests\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"dist",
  4 | 		"!tests"
  5 | 	]
  6 | }

`;

exports[`invalid(2): {\n\t\"files\": [\n\t\t\"dist\",\n\t\t\"!tests\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"dist",
> 4 | 		"!tests"
    | 		^^^^^^^^ No earlier \`files\` pattern can include \`tests\`, so this negation is ineffective.
  5 | 	]
  6 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"dist"
  4 | 	]
  5 | }

`;

exports[`invalid(20): {\n\t\"main\": \"./index.js\",\n\t\"files\": [\n\t\t\"**\",\n\t\t\"!index.js\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"main": "./index.js",
  3 | 	"files": [
  4 | 		"**",
  5 | 		"!index.js"
  6 | 	]
  7 | }

`;

exports[`invalid(20): {\n\t\"main\": \"./index.js\",\n\t\"files\": [\n\t\t\"**\",\n\t\t\"!index.js\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"main": "./index.js",
  3 | 	"files": [
  4 | 		"**",
> 5 | 		"!index.js"
    | 		^^^^^^^^^^^ \`index.js\` is always included by npm and is redundant in \`files\`.
  6 | 	]
  7 | }

Output:
  1 | {
  2 | 	"main": "./index.js",
  3 | 	"files": [
  4 | 		"**"
  5 | 	]
  6 | }

`;

exports[`invalid(21): {\n\t\"files\": [\n\t\t\"./README.md\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"./README.md"
  4 | 	]
  5 | }

`;

exports[`invalid(21): {\n\t\"files\": [\n\t\t\"./README.md\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
> 3 | 		"./README.md"
    | 		^^^^^^^^^^^^^ \`./README.md\` is always included by npm and is redundant in \`files\`.
  4 | 	]
  5 | }

Output:
  1 | {
  2 | 	"files": []
  3 | }

`;

exports[`invalid(22): {\n\t\"files\": [\n\t\t\"././README.md\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"././README.md"
  4 | 	]
  5 | }

`;

exports[`invalid(22): {\n\t\"files\": [\n\t\t\"././README.md\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
> 3 | 		"././README.md"
    | 		^^^^^^^^^^^^^^^ \`././README.md\` is always included by npm and is redundant in \`files\`.
  4 | 	]
  5 | }

Output:
  1 | {
  2 | 	"files": []
  3 | }

`;

exports[`invalid(23): {\n\t\"main\": \"././index.js\",\n\t\"files\": [\n\t\t\"index.js\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"main": "././index.js",
  3 | 	"files": [
  4 | 		"index.js"
  5 | 	]
  6 | }

`;

exports[`invalid(23): {\n\t\"main\": \"././index.js\",\n\t\"files\": [\n\t\t\"index.js\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"main": "././index.js",
  3 | 	"files": [
> 4 | 		"index.js"
    | 		^^^^^^^^^^ \`index.js\` is always included by npm and is redundant in \`files\`.
  5 | 	]
  6 | }

Output:
  1 | {
  2 | 	"main": "././index.js",
  3 | 	"files": []
  4 | }

`;

exports[`invalid(24): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"dist\",\n\t\t\"src\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"dist",
  5 | 		"src"
  6 | 	]
  7 | }

`;

exports[`invalid(24): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"dist\",\n\t\t\"src\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"dist",
> 5 | 		"src"
    | 		^^^^^ \`src\` is a duplicate entry in \`files\`.
  6 | 	]
  7 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"dist"
  5 | 	]
  6 | }

`;

exports[`invalid(25): {\n\t\"files\": [\n\t\t\"src/*.js\",\n\t\t\"src/*.js\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"src/*.js",
  4 | 		"src/*.js"
  5 | 	]
  6 | }

`;

exports[`invalid(25): {\n\t\"files\": [\n\t\t\"src/*.js\",\n\t\t\"src/*.js\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"src/*.js",
> 4 | 		"src/*.js"
    | 		^^^^^^^^^^ \`src/*.js\` is a duplicate entry in \`files\`.
  5 | 	]
  6 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"src/*.js"
  4 | 	]
  5 | }

`;

exports[`invalid(26): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"README.md\",\n\t\t\"LICENSE\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"README.md",
  5 | 		"LICENSE"
  6 | 	]
  7 | }

`;

exports[`invalid(26): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"README.md\",\n\t\t\"LICENSE\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"src",
> 4 | 		"README.md",
    | 		^^^^^^^^^^^ \`README.md\` is always included by npm and is redundant in \`files\`.
  5 | 		"LICENSE"
  6 | 	]
  7 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"LICENSE"
  5 | 	]
  6 | }

`;

exports[`invalid(26): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"README.md\",\n\t\t\"LICENSE\"\n\t]\n} 3`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"README.md",
> 5 | 		"LICENSE"
    | 		^^^^^^^^^ \`LICENSE\` is always included by npm and is redundant in \`files\`.
  6 | 	]
  7 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"README.md"
  5 | 	]
  6 | }

`;

exports[`invalid(27): {\n\t\"files\": [\n\t\t\"dist\",\n\t\t\"tests\",\n\t\t\"!tests\",\n\t\t\"dist\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"dist",
  4 | 		"tests",
  5 | 		"!tests",
  6 | 		"dist"
  7 | 	]
  8 | }

`;

exports[`invalid(27): {\n\t\"files\": [\n\t\t\"dist\",\n\t\t\"tests\",\n\t\t\"!tests\",\n\t\t\"dist\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"dist",
  4 | 		"tests",
  5 | 		"!tests",
> 6 | 		"dist"
    | 		^^^^^^ \`dist\` is a duplicate entry in \`files\`.
  7 | 	]
  8 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"dist",
  4 | 		"tests",
  5 | 		"!tests"
  6 | 	]
  7 | }

`;

exports[`invalid(28): {\n\t\"files\": [\n\t\t\"tests\",\n\t\t\"!tests\",\n\t\t\"dist\",\n\t\t\"!tests\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"tests",
  4 | 		"!tests",
  5 | 		"dist",
  6 | 		"!tests"
  7 | 	]
  8 | }

`;

exports[`invalid(28): {\n\t\"files\": [\n\t\t\"tests\",\n\t\t\"!tests\",\n\t\t\"dist\",\n\t\t\"!tests\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"tests",
  4 | 		"!tests",
  5 | 		"dist",
> 6 | 		"!tests"
    | 		^^^^^^^^ \`!tests\` is a duplicate entry in \`files\`.
  7 | 	]
  8 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"tests",
  4 | 		"!tests",
  5 | 		"dist"
  6 | 	]
  7 | }

`;

exports[`invalid(3): {\n\t\"files\": [\n\t\t\"!tests\",\n\t\t\"tests\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"!tests",
  4 | 		"tests"
  5 | 	]
  6 | }

`;

exports[`invalid(3): {\n\t\"files\": [\n\t\t\"!tests\",\n\t\t\"tests\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
> 3 | 		"!tests",
    | 		^^^^^^^^ No earlier \`files\` pattern can include \`tests\`, so this negation is ineffective.
  4 | 		"tests"
  5 | 	]
  6 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"tests"
  4 | 	]
  5 | }

`;

exports[`invalid(4): {\n\t\"files\": [\n\t\t\"**\",\n\t\t\"!package.json\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"**",
  4 | 		"!package.json"
  5 | 	]
  6 | }

`;

exports[`invalid(4): {\n\t\"files\": [\n\t\t\"**\",\n\t\t\"!package.json\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"**",
> 4 | 		"!package.json"
    | 		^^^^^^^^^^^^^^^ \`package.json\` is always included by npm and is redundant in \`files\`.
  5 | 	]
  6 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"**"
  4 | 	]
  5 | }

`;

exports[`invalid(5): {\n\t\"files\": [\n\t\t\"!!!tests\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"!!!tests"
  4 | 	]
  5 | }

`;

exports[`invalid(5): {\n\t\"files\": [\n\t\t\"!!!tests\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
> 3 | 		"!!!tests"
    | 		^^^^^^^^^^ No earlier \`files\` pattern can include \`tests\`, so this negation is ineffective.
  4 | 	]
  5 | }

Output:
  1 | {
  2 | 	"files": []
  3 | }

`;

exports[`invalid(6): {\n\t\"files\": [\n\t\t\"!!README.md\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"!!README.md"
  4 | 	]
  5 | }

`;

exports[`invalid(6): {\n\t\"files\": [\n\t\t\"!!README.md\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
> 3 | 		"!!README.md"
    | 		^^^^^^^^^^^^^ \`!!README.md\` is always included by npm and is redundant in \`files\`.
  4 | 	]
  5 | }

Output:
  1 | {
  2 | 	"files": []
  3 | }

`;

exports[`invalid(7): {\n\t\"files\": [\n\t\t\"dist\",\n\t\t\"!dist\",\n\t\t\"!dist\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"dist",
  4 | 		"!dist",
  5 | 		"!dist"
  6 | 	]
  7 | }

`;

exports[`invalid(7): {\n\t\"files\": [\n\t\t\"dist\",\n\t\t\"!dist\",\n\t\t\"!dist\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"dist",
  4 | 		"!dist",
> 5 | 		"!dist"
    | 		^^^^^^^ \`!dist\` is a duplicate entry in \`files\`.
  6 | 	]
  7 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"dist",
  4 | 		"!dist"
  5 | 	]
  6 | }

`;

exports[`invalid(8): {\n\t\"files\": [\n\t\t\"!!\",\n\t\t\"!!\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"!!",
  4 | 		"!!"
  5 | 	]
  6 | }

`;

exports[`invalid(8): {\n\t\"files\": [\n\t\t\"!!\",\n\t\t\"!!\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"!!",
> 4 | 		"!!"
    | 		^^^^ \`!!\` is a duplicate entry in \`files\`.
  5 | 	]
  6 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"!!"
  4 | 	]
  5 | }

`;

exports[`invalid(9): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"package.json\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"files": [
  3 | 		"src",
  4 | 		"package.json"
  5 | 	]
  6 | }

`;

exports[`invalid(9): {\n\t\"files\": [\n\t\t\"src\",\n\t\t\"package.json\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"files": [
  3 | 		"src",
> 4 | 		"package.json"
    | 		^^^^^^^^^^^^^^ \`package.json\` is always included by npm and is redundant in \`files\`.
  5 | 	]
  6 | }

Output:
  1 | {
  2 | 	"files": [
  3 | 		"src"
  4 | 	]
  5 | }

`;
